# nexus-cli-linux

./: .gitignore  Cargo.toml  README.md
local_crunchy/: Cargo.toml
local_crunchy/src/: lib.rs
src/: analytics.rs  keys.rs  main.rs  node_list.rs  orchestrator_client.rs  prover.rs  prover_runtime.rs  task.rs  task_pool.rs
src/proto/: nexus.orchestrator.rs
src/ui/: mod.rs
src/utils/: system.rs
